cabal-version:      2.4
name:               redirection-by-cookie
version:            0.1.0.0

executable demo
    main-is:          Main.hs
    build-depends:    base ^>=4.14.2.0
                    , cookie
                    , servant
                    , servant-server
                    , text
                    , wai
                    , warp
    hs-source-dirs:   .
    default-language: Haskell2010
